# ts-build-bug-repro

./: BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
src/: BUILD.bazel
